--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^12.15.0",
+    "@types/gsap": "^1.20.2",
+    "framer-motion": "^12.16.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
